# edge_ai

./: .env  .gitignore  LICENSE  README.md  compose.edgeai.yml  docker-compose.fr_db.yaml  docker-compose.fr_server.yaml  docker-compose.fr_v1.yaml  docker-compose.fr_v2.yaml  docker-compose.minio.yaml  docker_main.py  docker_spawn.py  environment.yml  fr.env  fr_server.env  locustfile.py  main.py
eai_core_api/: .dockerignore  config.py  imports.py  main.py  pyproject.toml  requirements copy.txt  requirements.txt
eai_core_api/backend/: exception_handlers.py
eai_core_api/docker/: .env.eai_core_api  compose.core_api.yml  compose.edgeai_db.yml  core_api copy.Dockerfile  core_api.Dockerfile
eai_core_api/eai_core_api/: config.py  imports.py  main.py
eai_core_api/src/: config.py
eai_core_api/utils/: hw_stats.py  logging.py
eai_deepstream/: custom_changes_deepstream.md  imports.py  main.py  pyproject.toml  run_temp.py
eai_deepstream/.devcontainer/: devcontainer.json
eai_deepstream/docker/: .env  compose.deepstream.dev.yml  compose.deepstream.yml  deepstream.Dockerfile  deepstream.dev.Dockerfile  install_dependencies.sh  requirements.txt
eai_deepstream/ds_configs/: __init__.py
eai_deepstream/ds_consts/: base_consts.py  camera_consts.py  pipeline_consts.py  server_consts.py
eai_deepstream/ds_docker/: deepstream.Dockerfile
eai_deepstream/ds_server/: exception_handlers.py  fastapi_app.py
eai_deepstream/ds_utils/: FPS.py  fastapi_uri_server.py  startLocalRtspStream.py
eai_deepstream/pipeline_scripts/: pipeline_choices_manager.py  pipeline_manager.py  run_pipeline.py
eai_deepstream/pipelines/: pipeline_choices.py  pipeline_manager.py  run_pipeline.py
eai_deepstream/triton_utils/: run_tc.py  tc_config.yml  tc_stats_utils.py  tc_utils.py  tc_vars.py  triton_client.py
eai_deepstream/utils/: ds_vars.py  img_utils.py  logging.py  other_utils.py  tc_vars.py  video_creator.py
eai_event_server/: config.py  faust_1.py  faust_app.py  faust_config.yml  faust_test.py  imports.py  kafka_data_gen.py  pyproject.toml  run.py  run_data_gen.py
eai_event_server/faust_manager/: manager.py
eai_shared/: pyproject.toml
(+283 files in other folders)
