[tool.poetry]
name = "eai-deepstream"
version = "0.1.0"
description = ""
authors = ["mvpavan <mvpavan42@gmail.com>"]
readme = "README.md"
packages = [{include = "eai_deepstream"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.prod.dependencies]
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
omegaconf = "^2.3.0"
requests = "^2.31.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
